--- a/java/controller/이미지를 여러개 등록하는 로직.md
+++ b/java/controller/이미지를 여러개 등록하는 로직.md
@@ -1,4 +1,4 @@
-# 파일 업로드를 통한 여러 이미지 등록 로직 구현 블로그
+# 파일 업로드를 통한 여러 이미지 등록 로직 구현
 
 ## 개요
 이 포스팅에서는 Spring Boot에서 파일 업로드를 통해 **여러 이미지를 등록**하는 로직을 구현하는 방법을 알아봅니다. 특히, 이미지 파일을 업로드하여 각 파일 경로를 `Product` 객체에 저장하는 과정을 중심으로 다룰 것입니다.
